stuck on z index issue

--- a/src/styles/carousel.module.css
+++ b/src/styles/carousel.module.css
@@ -11,6 +11,8 @@
     /* border: 2px solid green; */
     display: flex;
     margin: 5vh auto;
+    z-index: 2;
+    position: relative;
 
 
 }
